update index.html setting viewport

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
     <title>yuki2825624</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <script src="./script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
