--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-    <title>yuki2825624</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>yuki2825624</title>
     <script src="./script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
