--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/icon.png" type="image/png">
+    <link rel="shortcut icon" href="img/icon.png" type="image/png">
     <title>yuki2825624</title>
     <script src="./script.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -10,7 +12,7 @@
     <div class="banner">
         <h1 class="typing" data-text="Hi There"></h1>
     </div>
-    <div class="test-menu">
+    <div>
         <input type="checkbox" id="menu-button-check">
         <label for="menu-button-check" class="menu-button" style="height: 0%; width: 0%;">
             <h6>MENU</h6>
@@ -24,8 +26,16 @@
                 <li>
                     <a href="./index.html">Home</a>
                 </li>
+                <p id="license">
+                    © yuki2825624    
+                </p>
             </ul>
         </div>
+    </div>
+    <div class="intro">
+        <img src="img/icon.png" title="https://seiga.nicovideo.jp/tag/%E7%81%AB%E7%84%94%E7%8C%AB%E7%87%90%20?page=80&target=illust_all">
+        <h2 class="typing" data-text="yuki2825624"></h2>
+        <p class="typing" data-text="I'm yuki;Minecraft Developer / TypeScript / Python / C++ / C#"></p>
     </div>
     <p class="typing" data-text=""></p>
 </body>
