--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="img/icon.png" type="image/png">
     <link rel="shortcut icon" href="img/icon.png" type="image/png">
     <title>yuki2825624</title>
+    <meta property="og:title" content="Profile">
+    <meta property="og:description" content="yuki2825624 profile">
+    <meta property="og:url" content="https://yuki2825624.github.io/">
+    <meta property="og:image" content="https://yuki2825624.github.io/img/icon.png">
     <script src="./script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
