create 2 files and update 2 files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:url" content="https://yuki2825624.github.io/">
     <meta property="og:image" content="https://yuki2825624.github.io/img/icon.png">
     <script src="./script.js"></script>
+    <script src="achex/index.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,12 +28,8 @@
                 <br>
                 <br>
                 <br>
-                <li>
-                    <a href="./index.html">Home</a>
-                </li>
-                <p id="license">
-                    © yuki2825624    
-                </p>
+                <li><a href="./index.html">Home</a></li>
+                <li><p id="license">© yuki2825624</p></li>
             </ul>
         </div>
     </div>
@@ -40,6 +37,11 @@
         <img src="img/icon.png" title="https://seiga.nicovideo.jp/tag/%E7%81%AB%E7%84%94%E7%8C%AB%E7%87%90%20?page=80&target=illust_all">
         <h2 class="typing" data-text="yuki2825624"></h2>
         <p class="typing" data-text="I'm yuki;Minecraft Developer / TypeScript / Python / C++ / C#"></p>
+        <br>
+        <img src="https://discord-readme-badge.vercel.app/api?id=964310223235993690" title="Discord Status">
+    </div>
+    <div class="links">
+        <label class="box">Twitter - @yuki2825624</label>
     </div>
     <p class="typing" data-text=""></p>
 </body>
