一時的なテスト

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="menu-list">
                 <ul>
                     <li><a href="./index.html">Home</a></li><br>
-                    <li><a href="./index.html">Test</a></li><br>
+                    <li><a href="./tetris/index.html">Test</a></li><br>
                 </ul>
                 <p id="license">© yuki2825624</p>
             </div>
