--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
     <meta property="og:title" content="Profile">
     <meta property="og:description" content="yuki2825624 profile">
     <meta property="og:url" content="https://yuki2825624.github.io/">
-    <meta property="og:image" content="assets/icon.png">
-    <link rel="icon" href="assets/icon.png" type="image/png">
-    <link rel="shortcut icon" href="assets/icon.png" type="image/png">
+    <meta property="og:image" content="https://yuki2825624.github.io/assets/icon.png">
+    <link rel="icon" href="./assets/icon.png" type="image/png">
+    <link rel="shortcut icon" href="./assets/icon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
