--- a/work.html
+++ b/work.html
@@ -19,7 +19,9 @@
 
 <body>
     <div class="header">
-        <a href="./index.html"><img class="header-logo" src="./assets/icon.png" alt="yuki2825624" loading="lazy"></a>
+        <a href="./index.html" class="header-logo">
+            <img src="./assets/icon.png" alt="yuki2825624" loading="lazy">
+        </a>
         <div class="frame"></div>
         <input id="menu-button-active" type="checkbox" hidden />
         <label class="menu-button" for="menu-button-active">
