update: updated metadata descriptions on each page

--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <title>yuki2825624</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Profile">
-    <meta property="og:description" content="yuki2825624 profile">
+    <meta property="og:title" content="About">
+    <meta property="og:description" content="yuki2825624 About">
     <meta property="og:url" content="https://yuki2825624.github.io/">
     <meta property="og:image" content="https://yuki2825624.github.io/assets/icon.png">
     <link rel="icon" href="./assets/icon.png" type="image/png">
@@ -18,7 +18,9 @@
 
 <body>
     <div class="header">
-        <a href="./index.html"><img class="header-logo" src="./assets/icon.png" alt="yuki2825624" loading="lazy"></a>
+        <a href="./index.html" class="header-logo">
+            <img src="./assets/icon.png" alt="yuki2825624" loading="lazy">
+        </a>
         <div class="frame"></div>
         <input id="menu-button-active" type="checkbox" hidden />
         <label class="menu-button" for="menu-button-active">
@@ -68,6 +70,7 @@
     <main class="main-content">
         <div class="inner">
             <div class="introduction">
+                <!-- <h1 class="title">About</h1> -->
             </div>
             <div class="footer">
                 <footer class="license">
