--- a/work/licu.html
+++ b/work/licu.html
@@ -5,10 +5,10 @@
     <title>yuki2825624</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Profile">
-    <meta property="og:description" content="yuki2825624 profile">
+    <meta property="og:title" content="Work">
+    <meta property="og:description" content="yuki2825624 Work / Licu（りつ）<br>Discordの多機能Bot">
     <meta property="og:url" content="https://yuki2825624.github.io/">
-    <meta property="og:image" content="https://yuki2825624.github.io/assets/icon.png">
+    <meta property="og:image" content="https://yuki2825624.github.io/assets/work/licu.png">
     <link rel="icon" href="../assets/icon.png" type="image/png">
     <link rel="shortcut icon" href="../assets/icon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -18,7 +18,9 @@
 
 <body>
     <div class="header">
-        <a href="../index.html"><img class="header-logo" src="../assets/icon.png" alt="Home" loading="lazy"></a>
+        <a href="../index.html" class="header-logo">
+            <img src="../assets/icon.png" alt="yuki2825624" loading="lazy">
+        </a>
         <div class="frame"></div>
         <input id="menu-button-active" type="checkbox" hidden />
         <label class="menu-button" for="menu-button-active">
