--- a/work.html
+++ b/work.html
@@ -5,8 +5,8 @@
     <title>yuki2825624</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Profile">
-    <meta property="og:description" content="yuki2825624 profile">
+    <meta property="og:title" content="Work">
+    <meta property="og:description" content="yuki2825624 Work">
     <meta property="og:url" content="https://yuki2825624.github.io/">
     <meta property="og:image" content="https://yuki2825624.github.io/assets/icon.png">
     <link rel="icon" href="./assets/icon.png" type="image/png">
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js"></script>
-    <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
 </head>
 
 <body>
