update: updated metadata on each pages

--- a/work/tetris.html
+++ b/work/tetris.html
@@ -5,8 +5,11 @@
     <title>yuki2825624</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Work">
-    <meta property="og:description" content="yuki2825624 Work / Tetris（テトリス）<br>サイト作成の練習で作成したものの、当初JavaScriptの知識しかなく、9割がJavaScriptで作成されたテトリス">
+    <meta property="og:site_name" content="yuki2825624 Portfolio">
+    <meta property="og:title" content="yuki2825624 Portfolio - Work / Tetris（テトリス）">
+    <meta property="og:description" content="yukiのポートフォリオ用のサイトです。">
+    <meta property="og:title" content="Tetris（テトリス）">
+    <meta property="og:description" content="サイト作成の練習で作成したものの、当初JavaScriptの知識しかなく、9割がJavaScriptで作成されたテトリス">
     <meta property="og:url" content="https://yuki2825624.github.io/">
     <meta property="og:image" content="https://yuki2825624.github.io/assets/icon.png">
     <link rel="icon" href="../assets/icon.png" type="image/png">
