--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>yuki2825624</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Portfolio">
-    <meta property="og:description" content="yuki2825624 Portfolio">
+    <meta property="og:site_name" content="yuki2825624 Portfolio">
+    <meta property="og:title" content="yuki2825624 Portfolio">
+    <meta property="og:description" content="yukiのポートフォリオ用のサイトです。">
     <meta property="og:url" content="https://yuki2825624.github.io/">
     <meta property="og:image" content="https://yuki2825624.github.io/assets/icon.png">
     <link rel="icon" href="./assets/icon.png" type="image/png">
