--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
     <title>yuki2825624</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:site_name" content="yuki2825624 Portfolio">
     <meta property="og:title" content="Test">
     <meta property="og:description" content="yuki2825624 Test">
     <meta property="og:url" content="https://yuki2825624.github.io/">
