update: updated metadata

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta property="og:description" content="yukiのポートフォリオ用のサイトです。">
     <meta property="og:url" content="https://yuki2825624.github.io/">
     <meta property="og:image" content="https://yuki2825624.github.io/assets/icon.png">
+    <meta property="og:image:width" content="600">
+    <meta property="og:image:height" content="600">
     <link rel="icon" href="./assets/icon.png" type="image/png">
     <link rel="shortcut icon" href="./assets/icon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -54,8 +56,8 @@
                 </ul>
             </nav>
             <div class="social-container">
-                <p id="social-text">Social</p>
-                <ul id="social-list">
+                <p class="social-text">Social</p>
+                <ul class="social-list">
                     <li><a href="https://qiita.com/yuki2825624" target="_blank"><i class="fas fa-file-alt"></i></a></li>
                     <li><a href="https://github.com/yuki2825624" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                     <li><a href="https://twitter.com/yuki2825624" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
@@ -78,8 +80,8 @@
                     </ul>
                 </nav>
                 <div class="social-container">
-                    <p id="social-text">Social</p>
-                    <ul id="social-list">
+                    <p class="social-text">Social</p>
+                    <ul class="social-list">
                         <li><a href="https://qiita.com/yuki2825624" target="_blank"><i class="fas fa-file-alt"></i></a></li>
                         <li><a href="https://github.com/yuki2825624" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                         <li><a href="https://twitter.com/yuki2825624" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
@@ -92,19 +94,19 @@
         <div class="inner">
             <div class="introduction">
                 <div class="profile">
-                    <img id="icon" src="./assets/icon.png" alt="yuki2825624" loading="lazy">
+                    <img class="profile-icon" src="./assets/icon.png" alt="yuki2825624" loading="lazy">
                     <div class="profile-name">
                         <p id="name">yuki</p>
                         <p id="id">@yuki2825624</p>
                     </div>
-                    <p id="description" class="typing" data-text="学生。JavaScript / TypeScript を好む。;普段はMinecraftから始まり、DiscordのBotや、ウェブサイト、ゲームなどの開発をしている。;気分では記事の執筆もしている。;最近の趣味は将棋、囲碁やチェスなど。"></p>
-                    <ul id="social-list">
-                        <li><a href="https://qiita.com/yuki2825624" target="_blank"><i class="fas fa-file-alt"></i></a></li>
-                        <li><a href="https://github.com/yuki2825624" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-                        <li><a href="https://twitter.com/yuki2825624" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                        <li><a href="https://steamcommunity.com/profiles/76561199384039065/" target="_blank"><i class="fa-brands fa-steam"></i></a></li>
-                        <li><a href="https://discord.com/users/964310223235993690" target="_blank"><i class="fa-brands fa-discord"></i></a></li>
-                    </ul>
+                    <p class="profile-description typing" data-text="学生。JavaScript / TypeScript を好む。;普段はMinecraftから始まり、DiscordのBotや、ウェブサイト、ゲームなどの開発をしている。;気分では記事の執筆もしている。;最近の趣味は将棋、囲碁やチェスなど。"></p>
+                    <div class="profile-social-list">
+                        <a href="https://qiita.com/yuki2825624" target="_blank"><i class="fas fa-file-alt"></i></a>
+                        <a href="https://github.com/yuki2825624" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://twitter.com/yuki2825624" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://steamcommunity.com/profiles/76561199384039065/" target="_blank"><i class="fa-brands fa-steam"></i></a>
+                        <a href="https://discord.com/users/964310223235993690" target="_blank"><i class="fa-brands fa-discord"></i></a>
+                    </div>
                 </div>
                 <div class="divider"></div>
                 <div class="work">
