--- a/test.html
+++ b/test.html
@@ -6,10 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name" content="yuki2825624 Portfolio">
-    <meta property="og:title" content="Test">
-    <meta property="og:description" content="yuki2825624 Test">
-    <meta property="og:url" content="https://yuki2825624.github.io/">
+    <meta property="og:title" content="yuki2825624 Portfolio - Test">
+    <meta property="og:description" content="yukiのポートフォリオ用のサイトです。">
+    <meta property="og:url" content="https://yuki2825624.github.io/test.html">
     <meta property="og:image" content="https://yuki2825624.github.io/assets/icon.png">
+    <meta property="og:image:width" content="600">
+    <meta property="og:image:height" content="600">
     <link rel="icon" href="./assets/icon.png" type="image/png">
     <link rel="shortcut icon" href="./assets/icon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -56,8 +58,8 @@
                 </ul>
             </nav>
             <div class="social-container">
-                <p id="social-text">Social</p>
-                <ul id="social-list">
+                <p class="social-text">Social</p>
+                <ul class="social-list">
                     <li><a href="https://qiita.com/yuki2825624" target="_blank"><i class="fas fa-file-alt"></i></a></li>
                     <li><a href="https://github.com/yuki2825624" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                     <li><a href="https://twitter.com/yuki2825624" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
